<resources>
    <string name="config_baidu_map_api_key">0930DE7C67318D29F9BDEC46BD7B75F71628FCA8</string>
    <string name="config_weibo_url_str">http://weibo.com/u/3003038140</string>
    <string name="config_company_url_str">http://www.andpay.me</string>
    <string name="config_service_phonenumber_str">4007-288-100</string>
    <string name="config_service_email_str">service@andpay.me</string>
    <string name="note_pull_down">下拉可以刷新&#8230;</string>
    <string name="note_pull_refresh">松开即可刷新&#8230;</string>
    <string name="note_pull_loading">加载中&#8230;</string>
    <string name="note_update_at">最后更新时间：%1$tY-%1$tm-%1$td %1$tH:%1$tM</string>
    <string name="note_not_update">尚未更新</string>
    <string name="com_pur_str">MPOS 消费</string>
    <string name="com_refund_str">MPOS 退款</string>
    <string name="com_query_str">MPOS 交易查询</string>
    <string name="com_stlstat_str">结帐统计</string>
    <string name="com_more_str">更多</string>
    <string name="app_name">银联商户移动综合服务平台</string>
    <string name="com_progress_prompt_str">操作处理中...</string>
    <string name="com_download_str">更 新</string>
    <string name="com_download_failed">更 新</string>
    <string name="com_setting_str">设置</string>
    <string name="com_sure_str">确 定</string>
    <string name="com_back_str">返回</string>
    <string name="com_back_modify_str">返回修改</string>
    <string name="com_cancel_str">取消</string>
    <string name="com_home_str">首页</string>
    <string name="com_send_str">发送</string>
    <string name="com_txntypes_title_str">请选择交易类型</string>
    <string name="com_non_str">无数据记录</string>
    <string name="com_xlistview_header_hint_normal_str">下拉刷新</string>
    <string name="com_xlistview_header_hint_ready_str">松开刷新数据</string>
    <string name="com_xlistview_header_hint_loading_str">正在加载...</string>
    <string name="com_xlistview_header_last_time_str">最后更新时间：%1$tY-%1$tm-%1$td %1$tH:%1$tM</string>
    <string name="com_xlistview_footer_hint_normal_str">查看更多</string>
    <string name="com_xlistview_footer_hint_ready_str">松开载入更多</string>
    <string name="com_time_str">%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS</string>
    <string name="com_simple_time_str">%1$tH:%1$tM:%1$tS</string>
    <string name="com_net_error">网络出现异常...</string>
    <string name="com_net_update_str">更新包下载中...</string>
    <string name="com_net_update_error_str">更新包失败</string>
    <string name="com_net_update_error_cancel_str">取消下载</string>
    <string name="com_net_update_error_redo_str">重新下载</string>
    <string name="com_net_select_succ">网络优化成功，请重新操作</string>
    <string name="com_net_select_fail">网络优化失败，请退出重新操作</string>
    <string name="com_image_content_desc">图片描述</string>
    <string name="com_next_str">下一步</string>
    <string name="com_keyboard_ok_str">完成</string>
    <string name="com_amount_title_str"> 金额</string>
    <string name="com_date_title_str"> 日期</string>
    <string name="com_refno_title_str"> 参考号</string>
    <string name="com_orderno_title_str"> 订单编号</string>
    <string name="com_cardno_title_str"> 卡号</string>
    <string name="com_and_title_str">至</string>
    <string name="com_txntype_title_str"> 交易类型</string>
    <string name="com_paytype_title_str"> 支付类型</string>
    <string name="com_amt_str">￥0.00</string>
    <string name="com_show_str">提示</string>
    <string name="com_sure_logout__apos_str">是否确认退出银联商户移动综合服务平台？</string>
    <string name="com_session_timeout_title_str">用户会话实效，请重新输入密码。</string>
    <string name="com_login_out_str">退出</string>
    <string name="com_update_title_str">更新提示</string>
    <string name="com_update_version_str">版本：</string>
    <string name="com_update_size_str">大小：</string>
    <string name="com_update_time_str">时间：</string>
    <string name="com_net_error_str">请求远端数据失败，请检查网络设置</string>
    <string name="com_net_check_error_str">没有检测到网络连接，请检查网络设置</string>
    <string name="com_net_error_button_str">刷新</string>
    <string name="com_net_error_prompt_title_str">网络连接失败</string>
    <string name="com_net_error_prompt_str">如果刷新多次仍然失败，建议退出重新登录。</string>
    <string name="com_net_error_sure_btn_str">重新登录</string>
    <string name="com_can_not_null_str">不能为空</string>
    <string name="com_check_must_gt_str">必须大于等于</string>
    <string name="com_check_must_lt_str">个字符小于等于</string>
    <string name="com_check_char_count_str">个字符</string>
    <string name="com_device_stopping_str">设备停止中...</string>
    <string name="com_please_check_network_str">网络无法连接，请稍后再试。</string>
    <string name="com_check_error_str">验证失败</string>
    <string name="com_system_retry_str">系统长时间未操作，自动重新登录。</string>
    <string name="com_error_title">错误提示</string>
    <string name="com_please_check_network_set_str">网络无法连接，请检查网络设置。</string>
    <string name="com_login_out_user_str">签退</string>
    <string name="opm_tab_name">MPOS 订单支付</string>
    <string name="opm_order_list_no_refresh_str">没有新的订单数据</string>
    <string name="opm_order_list_refresh_str">你有%1$d条订单数据更新</string>
    <string name="opm_order_list_count_title_str">条订单记录</string>
    <string name="lam_login_title_str">登录</string>
    <string name="lam_login_btn_str">登 录</string>
    <string name="lam_username_hit_str">手机号</string>
    <string name="lam_holder_phone_hit_str">持卡人手机号</string>
    <string name="lam_pwd_hit_str">密码</string>
    <string name="lam_begin_str">立即体验</string>
    <string name="lam_change_password_str">修改密码</string>
    <string name="lam_new_password_str">新密码</string>
    <string name="lam_repeate_passord_str">确认新密码</string>
    <string name="lam_old_password_str">旧密码</string>
    <string name="lam_login_faild_str">登录失败</string>
    <string name="lam_reinput_str">重新输入</string>
    <string name="lam_change_password_success_str">密码修改成功</string>
    <string name="lam_change_password_faild_str">密码修改失败</string>
    <string name="lam_set_cardreader_str">设置读卡器</string>
    <string name="lam_select_cardreader_str">连接读卡器</string>
    <string name="lam_logo_txn_str">移动POS机，随时随地支付</string>
    <string name="lam_service_introduce_str">服务介绍</string>
    <string name="lam_forget_password_str">忘记密码？</string>
    <string name="lam_login_copyright_text_str">服务电话 4007-288-100 银联商户移动综合服务平台$VERSION$版</string>
    <string name="lam_copyright_text_str">Copyright @ 2013 AndPay,Inc.All Rights Reserved</string>
    <string name="lam_logining_dialog_str">正在登录...</string>
    <string name="lam_cardreader_type1_str">1型</string>
    <string name="lam_cardreader_type2_str">2型</string>
    <string name="lam_cardreader_type3_str">3型</string>
    <string name="lam_cardreader_type4_str">4型</string>
    <string name="lam_cardreader_type5_str">5型</string>
    <string name="lam_cardreader_type6_str">6型</string>
    <string name="lam_cardreader_sekect_ok_str">读卡器已正确选择</string>
    <string name="lam_save_password_str">自动登录</string>
    <string name="lam_input_pwd_hit_str">请输入密码</string>
    <string name="lam_introduce_text1_str">银联商户移动综合服务平台支持所有银联卡及外卡交易</string>
    <string name="lam_introduce_text2_str">您还可以灵活选择需要的读卡器类型</string>
    <string name="lam_introduce_text3_str">支持所有银联卡及外卡交易</string>
    <string name="lam_introduce_text4_str">您可以为终端用户设置消费和退款权限</string>
    <string name="lam_introduce_text5_str">通过商户数据服务系统</string>
    <string name="lam_your_has_onetxn_str">您有一笔金额为</string>
    <string name="lam_please_goon_str">未完成,请继续完成。</string>
    <string name="lam_your_password_must_change_str">您的密码已过期或为初始密码，请修改密码。</string>
    <string name="lam_your_password_past_due_str">您的密码今天就要过期，请修改密码。</string>
    <string name="lam_your_password_has_str">您的密码还有</string>
    <string name="lam_must_past_due_str">天就要过期，请修改密码。</string>
    <string name="lam_contect_reset_password_str">请联系系统管理员重置密码。</string>
    <string name="lam_login_no_roles_str">您未设置任何权限，请联系系统管理员设置权限。</string>
    <string name="lam_activate_error_str">激活失败</string>
    <string name="lam_activating_str">正在激活...</string>
    <string name="lam_resend_str">重 发</string>
    <string name="lam_input_activate_code_str">请输入激活码</string>
    <string name="lam_activate_code_prompt_str">激活码已发至您登录时填写的手机和您注册用户时绑定的邮箱，请尽快填写并提交，有效期60分钟。</string>
    <string name="lam_user_activate_str">终端激活</string>
    <string name="lam_time_second_str">$TIME$秒</string>
    <string name="lam_activate_code_send_success_str">激活码发送成功</string>
    <string name="lam_help_startbtn_str">立即体验</string>
    <string name="lam_help_title1_str">1. 刷卡</string>
    <string name="lam_help_title2_str">2. 电子签名</string>
    <string name="lam_help_title3_str">3. 发送电子消费凭据</string>
    <string name="lam_help_title4_str">4. 次日资金到账</string>
    <string name="lam_help_content1_str">商家在与智能手机相连的APOS读卡器上，刷消费者提供的银行卡，发起消费扣款。</string>
    <string name="lam_help_content2_str">消费扣款成功后，消费者在商家的智能手机上电子签名确认消费。</string>
    <string name="lam_help_content3_str">商家通过银联商户移动综合服务平台将电子消费凭据发送给消费者， 完成消费。</string>
    <string name="lam_help_content4_str">次日，湖南银联将消费资金结算到商家指定的收款银行账户。商家可以随时上网查询所有交易明细。</string>
    <string name="lam_sure_user_str">确认符合使用条件</string>
    <string name="lam_risk_cotent_str">银联商户移动综合服务平台产品仅限与和湖南银联
        直接签约的商户使用。如通过第三方进行接入，将对您的资金安全产生风险。如您需要使用银联商户移动综合服务平台产品，请直接联系我们。</string>
    <string name="lam_risk_title_str">风险提示</string>
    <string name="tam_hint_orderNo_str">订单编号</string>
    <string name="tam_hint_memo_str">备注</string>
    <string name="tam_pur_ext_info_str">添加备注</string>
    <string name="tam_top_pur_str">消费</string>
    <string name="tam_top_qr_scan_str">扫描二维码</string>
    <string name="tam_top_connet_cardreader_str">连接读卡器</string>
    <string name="tam_top_swip_str">请刷卡</string>
    <string name="tam_covert_browser_srt">请切换至持卡人游览器模式</string>
    <string name="tam_top_input_pass_str">输入密码</string>
    <string name="tam_top_cloud_order_waitpay_str">等待支付结果</string>
    <string name="tam_top_cloud_order_upload_str">订单传送中...</string>
    <string name="tam_cloud_txntype_error_str">不支持的操作</string>
    <string name="tam_phone_hint_str">持卡人手机号</string>
    <string name="tam_ordername_str">订单编号</string>
    <string name="tcm_infochallenge_str">持卡人身份验证</string>
    <string name="tcm_infochallenge_explanation_str">说明文字</string>
    <string name="tcm_infochallenge_phone_str">手机号</string>
    <string name="tcm_infochallenge_phone_hint_str">请输入银行预留的手机号</string>
    <string name="tcm_infochallenge_name_str">姓名</string>
    <string name="tcm_infochallenge_name_hint_str">请输入持卡人姓名</string>
    <string name="tcm_infochallenge_identity_str">身份证号</string>
    <string name="tcm_infochallenge_identity_hint_str">请输入持卡人身份证号</string>
    <string name="tcm_infochallenge_cvv2_str">CVV2</string>
    <string name="tcm_infochallenge_cvv2_hint_str">请输入信用卡背后3位</string>
    <string name="tqm_txn_list_condition_str">条件查询</string>
    <string name="tqm_clear_cond_str">清 空</string>
    <string name="tqm_txn_start_str">交易开始</string>
    <string name="tqm_txn_end_str">交易结束</string>
    <string name="trm_txn_dialog_pwd_title_str">输入密码</string>
    <string name="trm_txn_dialog_login_pwd_str">请输入登录密码</string>
    <string name="scm_help_use_open_str">服务开通</string>
    <string name="scm_help_use_open_text_str">签署完服务合同后，会向商户提供密码、数字证书等信息，商户管理员凭密码和证书即可登录银联商户移动综合服务平台数据服务系统，为本企业设置各类终端和后台用户。</string>
    <string name="scm_help_use_msr_str">获取读卡器</string>
    <string name="scm_help_use_msr_text_str">银联商户移动综合服务平台服务团队将于指定时间内将读卡器递交至商户处。</string>
    <string name="scm_help_use_download_str">下载和安装</string>
    <string name="scm_help_use_download_text_str">在应用商店（google play、百度应用、移动MM等），搜索银联商户移动综合服务平台或湖南银联，即可免费下载和安装客户端应用。下载前建议您前往www.andpay.me查询下具体支持机型列表，以确保正常使用。</string>
    <string name="scm_help_use_experience_str">进入体验</string>
    <string name="scm_help_use_experience_text_str">使用您所在商户管理员设置分配好的ID及密码，即可登录客户端应用。在进行交易时，需要您按提示连接读卡器，以完成银行卡信息读取。</string>
    <string name="vas_user_register_str">用户登记</string>
    <string name="vas_sure_str">确定</string>
    <string name="vas_tel_no_str">手机号码（获取电子卡）</string>
    <string name="vas_repeat_tel_no_str">重输手机号</string>
    <string name="vas_user_str">持卡人姓名</string>
    <string name="vas_id_type_str">证件类型</string>
    <string name="vas_id_NO_str">证件号码</string>
</resources>