<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apos="http://schemas.android.com/apk/res/me.andpay.apos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_bgroud_common_col"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
       android:id="@+id/mservice_query_top"
        style="@style/com_native_top_style" >

        <TextView
          
            style="@style/com_top_text_style"
            android:text="@string/tqm_txn_list_condition_str" />

        <Button
            android:id="@+id/mservice_query_clear_btn"
            style="@style/com_top_right_button_style"
            android:layout_width="46dp"
            android:text="@string/tqm_clear_cond_str" />

      
        <ImageView
            android:id="@+id/mservice_query_back_btn"
            style="@style/com_top_return_button_style" />
    </RelativeLayout>

    <RelativeLayout
        
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/mservice_query_top"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="20dp" >

        <me.andpay.apos.cmview.TiDatePickerView
            android:id="@+id/mservice_query_date_begin_ev"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:drawableRight="@drawable/com_icon_date_img"
            android:editable="false"
            android:hint="@string/tqm_txn_start_str"
            android:textColor="@color/com_title_normal_col"
            android:textColorHint="#cccccc" />

        <me.andpay.apos.cmview.TiDatePickerView
            android:id="@+id/mservice_query_date_end_ev"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/com_icon_date_img"
            android:editable="false"
            android:hint="@string/tqm_txn_end_str"
            android:textColorHint="#cccccc" />

        <TextView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/com_and_title_str"
            android:textColor="@color/com_title_normal_col"
            android:textSize="18dp" />
    </RelativeLayout>

   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp" >

        <Button
            android:id="@+id/mservice_query_cancel_btn"
            style="@style/com_button_left_style"
            android:text="@string/com_cancel_str" />

        <Button
            android:id="@+id/mservice_query_sure_btn"
            style="@style/com_button_right_style"
            android:layout_marginLeft="13dp"
            android:text="@string/com_sure_str" />
    </LinearLayout>

    

</RelativeLayout>