<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:background="@drawable/com_dialog_shape"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/trm_refund_dialog_title_tv"
        style="@style/com_dialog_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/trm_txn_dialog_pwd_title_str" />

    <TextView
        android:id="@+id/trm_refund_dialog_userid_tv"
        style="@style/com_dialog_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/trm_refund_dialog_pwd_ev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:hint="@string/trm_txn_dialog_login_pwd_str"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:paddingBottom="7dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp" >

        <Button
            android:id="@+id/trm_txn_refund_sure_btn"
            style="@style/com_button_left_style"
            android:text="@string/com_sure_str" />

        <Button
            android:id="@+id/trm_txn_refund_cancel_btn"
            style="@style/com_button_right_style"
            android:layout_marginLeft="13dp"
            android:text="@string/com_cancel_str" />
    </LinearLayout>

</LinearLayout>